@@ -37,4 +37,6 @@ alphaDispersionCoeffs
     alphaT alphaT [0 1 0 0 0 0 0] 0.002;
 }
 
+eventFilePatchMassFlowRate "patchInjection.dat";
+
 // ************************************************************************* //
